remove relative link

--- a/_layouts/cate.html
+++ b/_layouts/cate.html
@@ -5,13 +5,13 @@
 	<meta charset="UTF-8"/>
 	<!-- Bootstrap -->
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<link href="../../assets/css/slideshow.css" rel="stylesheet" media="screen"/>
-	<link href="../../assets/css/style_white.css" rel="stylesheet" media="screen"/>
-	<link href="../../assets/css/stylesheet.css" rel="stylesheet" media="screen">
-	<link href="../../assets/css/mycss.css" rel="stylesheet" media="screen">
+	<link href="/assets/css/slideshow.css" rel="stylesheet" media="screen"/>
+	<link href="/assets/css/style_white.css" rel="stylesheet" media="screen"/>
+	<link href="/assets/css/stylesheet.css" rel="stylesheet" media="screen">
+	<link href="/assets/css/mycss.css" rel="stylesheet" media="screen">
 
-	<script type="text/javascript" src="../../assets/js/mootools.js"></script>
-	<script type="text/javascript" src="../../assets/js/slideshow.js"></script>
+	<script type="text/javascript" src="/assets/js/mootools.js"></script>
+	<script type="text/javascript" src="/assets/js/slideshow.js"></script>
 
 </head>
 <body>
@@ -52,10 +52,10 @@
 							<p>
 								<span>
 									<a href="http://www.bdmc.fr/"><img width="26" height="26" src="assets/images/logocontact.jpg.html" alt=""/></a>&nbsp;&nbsp;&nbsp;
-									<a href="https://www.facebook.com/NguyenTayArt"><img src="../../assets/images/facebook_icon.png" alt="Facebook"/></a>&nbsp;&nbsp;&nbsp;
-									<a href="https://twitter.com/nguyentayart"><img src="../../assets/images/twitter_icon.png" alt="Twitter"/></a>&nbsp;&nbsp;&nbsp;
-									<a href="http://instagram.com/nguyentayartist"><img width="26" height="26" src="../../assets/images/instagram_icon.jpg" alt="Instagram"/></a>
-									<a href="https://www.pinterest.com/nguyentayartist/"><img src="../../assets/images/pinterest.jpg" width="26" height="26" alt="Pinterest"/></a>
+									<a href="https://www.facebook.com/NguyenTayArt"><img src="/assets/images/facebook_icon.png" alt="Facebook"/></a>&nbsp;&nbsp;&nbsp;
+									<a href="https://twitter.com/nguyentayart"><img src="/assets/images/twitter_icon.png" alt="Twitter"/></a>&nbsp;&nbsp;&nbsp;
+									<a href="http://instagram.com/nguyentayartist"><img width="26" height="26" src="/assets/images/instagram_icon.jpg" alt="Instagram"/></a>
+									<a href="https://www.pinterest.com/nguyentayartist/"><img src="/assets/images/pinterest.jpg" width="26" height="26" alt="Pinterest"/></a>
 									<!--
 									<a href="#"><img src="http://nguyentay.art/assets/images/googleplus_icon.png" alt="Google+"/></a>&nbsp;&nbsp;&nbsp;
 									<a href="#"><img src="http://nguyentay.art/assets/images/youtube_icon.png" alt="Youtube"/></a>
@@ -83,20 +83,20 @@
 			<div class="main_left">
 				<ul class="main_nav">
 
-					<li><a href="../../home.html">home</a></li>
-					<li><a href="../../catalogue.html">visual art</a></li>
+					<li><a href="/home.html">home</a></li>
+					<li><a href="/catalogue.html">visual art</a></li>
 										<!-- <li><a href="http://nguyentay.art/research">research</a></li>  -->
-					<li><a href="../../cv.html">cv </a></li>
-					<li><a href="../../exhibiton.html">Exhibiton </a>
+					<li><a href="/cv.html">cv </a></li>
+					<li><a href="/exhibiton.html">Exhibiton </a>
 												<ul>
 																			<li><a href="16.html">Exhibitions / Expositions 2017</a></li>
 																					<li><a href="13.html">Exhibition in 2016</a></li>
 																					<li><a href="10.html">Exhibition in 2015</a></li>
 																	</ul>
 												</li>
-					<li><a href="../../pressbook.html">Press Book </a>
+					<li><a href="/pressbook.html">Press Book </a>
 										</li>
-					<li><a href="../../contact.html">contact</a></li>
+					<li><a href="/contact.html">contact</a></li>
 				</ul>
 
 
@@ -120,11 +120,11 @@
 			<div class="footer_rgt">
 
 			</div>
-		</div>		
+		</div>
 
 		<div id="baseband">
 			<div id="seo">
-				<div class="powered"><a traget="_blank" href="../../index.html">Powered by nguyentay</a></div>
+				<div class="powered"><a traget="_blank" href="/index.html">Powered by nguyentay</a></div>
 			</div>
 			<strong>&copy; Copyright 2014 </strong>
 		</div>
