testing if conditional part

--- a/_layouts/cate.html
+++ b/_layouts/cate.html
@@ -85,6 +85,17 @@
 
 					<li><a href="/home.html">home</a></li>
 					<li><a href="/catalogue.html">visual art</a></li>
+{% if page.category == "catalogue" %}
+<ul>
+							<li><a href="../../cate/18.html">Artworks 2017</a></li>
+									<li><a href="../../cate/12.html">Artworks 2016</a></li>
+									<li><a href="../../cate/9.html">Artworks 2015</a></li>
+									<li><a href="../../cate/8.html">Last exhibitions</a></li>
+									<li><a href="../../cate/7.html">Artworks 2014</a></li>
+									<li><a href="../../cate/5.html">Artworks 2013</a></li>
+									<li><a href="../../cate/4.html">Artworks 2010-2012</a></li>
+					</ul>
+{% endif %}
 										<!-- <li><a href="http://nguyentay.art/research">research</a></li>  -->
 					<li><a href="/cv.html">cv </a></li>
 					<li><a href="/exhibiton.html">Exhibiton </a>
