updating category of each page

--- a/_layouts/cate.html
+++ b/_layouts/cate.html
@@ -87,24 +87,26 @@
 					<li><a href="/catalogue.html">visual art</a></li>
 {% if page.category == "catalogue" %}
 <ul>
-							<li><a href="../../cate/18.html">Artworks 2017</a></li>
-									<li><a href="../../cate/12.html">Artworks 2016</a></li>
-									<li><a href="../../cate/9.html">Artworks 2015</a></li>
-									<li><a href="../../cate/8.html">Last exhibitions</a></li>
-									<li><a href="../../cate/7.html">Artworks 2014</a></li>
-									<li><a href="../../cate/5.html">Artworks 2013</a></li>
-									<li><a href="../../cate/4.html">Artworks 2010-2012</a></li>
+							<li><a href="/cate/18.html">Artworks 2017</a></li>
+									<li><a href="/catalogue/cate/12.html">Artworks 2016</a></li>
+									<li><a href="/catalogue/cate/9.html">Artworks 2015</a></li>
+									<li><a href="/catalogue/cate/8.html">Last exhibitions</a></li>
+									<li><a href="/catalogue/cate/7.html">Artworks 2014</a></li>
+									<li><a href="/catalogue/cate/5.html">Artworks 2013</a></li>
+									<li><a href="/catalogue/cate/4.html">Artworks 2010-2012</a></li>
 					</ul>
 {% endif %}
 										<!-- <li><a href="http://nguyentay.art/research">research</a></li>  -->
 					<li><a href="/cv.html">cv </a></li>
 					<li><a href="/exhibiton.html">Exhibiton </a>
+{% if page.category == "exhibition" %}
 												<ul>
 																			<li><a href="16.html">Exhibitions / Expositions 2017</a></li>
 																					<li><a href="13.html">Exhibition in 2016</a></li>
 																					<li><a href="10.html">Exhibition in 2015</a></li>
 																	</ul>
 												</li>
+{% endif %}
 					<li><a href="/pressbook.html">Press Book </a>
 										</li>
 					<li><a href="/contact.html">contact</a></li>
