--- a/_layouts/cate.html
+++ b/_layouts/cate.html
@@ -95,7 +95,7 @@
 					<li><a href="/catalogue.html">visual art</a></li>
 {% if page.category == "catalogue" %}
 <ul>
-							<li><a href="/cate/18.html">Artworks 2017</a></li>
+							<li><a href="/catalogue/cate/18.html">Artworks 2017</a></li>
 									<li><a href="/catalogue/cate/12.html">Artworks 2016</a></li>
 									<li><a href="/catalogue/cate/9.html">Artworks 2015</a></li>
 									<li><a href="/catalogue/cate/8.html">Last exhibitions</a></li>
@@ -109,9 +109,9 @@
 					<li><a href="/exhibiton.html">Exhibiton </a>
 {% if page.category == "exhibition" %}
 												<ul>
-																			<li><a href="16.html">Exhibitions / Expositions 2017</a></li>
-																					<li><a href="13.html">Exhibition in 2016</a></li>
-																					<li><a href="10.html">Exhibition in 2015</a></li>
+																			<li><a href="/exhibiton/cate/16.html">Exhibitions / Expositions 2017</a></li>
+																					<li><a href="/exhibiton/cate/13.html">Exhibition in 2016</a></li>
+																					<li><a href="/exhibiton/cate/10.html">Exhibition in 2015</a></li>
 																	</ul>
 {% endif %}
 												</li>
@@ -119,9 +119,9 @@
 					<li><a href="/pressbook.html">Press Book </a>
 {% if page.category == "pressbook" %}
 																	<ul>
-																			<li><a href="../../cate/17.html">2017</a></li>
-																					<li><a href="../../cate/15.html">2015</a></li>
-																					<li><a href="../../cate/14.html">2016</a></li>
+																			<li><a href="/pressbook/cate/17.html">2017</a></li>
+																					<li><a href="/pressbook/cate/15.html">2015</a></li>
+																					<li><a href="/pressbook/cate/14.html">2016</a></li>
 																	</ul>
 {% endif %}
 										</li>
