--- a/_layouts/cate.html
+++ b/_layouts/cate.html
@@ -105,7 +105,7 @@
 {% endif %}
 										<!-- <li><a href="/research">research</a></li>  -->
 					<li><a href="/cv.html">cv </a></li>
-					<li><a href="/exhibiton.html">Exhibiton </a>
+					<li><a href="/exhibiton.html">Exhibition</a>
 {% if page.category == "exhibition" %}
 												<ul>
 																			<li><a href="/exhibiton/cate/16.html">Exhibitions / Expositions 2017</a></li>
