Fix #21 Update social media logos and URL

--- a/_layouts/cate.html
+++ b/_layouts/cate.html
@@ -59,10 +59,10 @@
 						<div style="float: right;">
 							<p>
 								<span>
-									<a href="https://www.facebook.com/NguyenTayArt"><img src="/assets/images/facebook_icon.png" alt="Facebook"/></a>&nbsp;&nbsp;&nbsp;
-									<a href="https://twitter.com/nguyentayart"><img src="/assets/images/twitter_icon.png" alt="Twitter"/></a>&nbsp;&nbsp;&nbsp;
-									<a href="http://instagram.com/nguyentayartist"><img width="26" height="26" src="/assets/images/instagram_icon.jpg" alt="Instagram"/></a>
-									<a href="https://www.pinterest.com/nguyentayartist/"><img src="/assets/images/pinterest.jpg" width="26" height="26" alt="Pinterest"/></a>
+									<a href="https://www.facebook.com/NguyenTayArt"><img src="/assets/images/facebook-logo.svg" height="26" alt="Facebook"/></a>
+									<a href="https://twitter.com/nguyentayart"><img src="/assets/images/twitter.svg" height="26" alt="Twitter"/></a>
+									<a href="https://www.instagram.com/nguyentay.art/"><img width="26" height="26" src="/assets/images/instagram.svg" alt="Instagram"/></a>
+									<a href="https://www.pinterest.com/nguyentayartist/"><img src="/assets/images/pinterest.svg" width="26" height="26" alt="Pinterest"/></a>
 									<!--
 									<a href="#"><img src="/assets/images/googleplus_icon.png" alt="Google+"/></a>&nbsp;&nbsp;&nbsp;
 									<a href="#"><img src="/assets/images/youtube_icon.png" alt="Youtube"/></a>
