--- a/_layouts/cate.html
+++ b/_layouts/cate.html
@@ -3,7 +3,7 @@
 
 <head>
 	{% if page.category == "catalogue" %}
-	<title>Catalogue</title>
+	<title>Visual Art</title>
 	{% endif %}
 	{% if page.category == "exhibition" %}
 	<title>Exhibiton</title>
@@ -19,7 +19,10 @@
 	<link href="/assets/css/style_white.css" rel="stylesheet" media="screen" />
 	<link href="/assets/css/stylesheet.css" rel="stylesheet" media="screen">
 	<link href="/assets/css/mycss.css" rel="stylesheet" media="screen">
-
+    <link href='https://fonts.googleapis.com/css?family=IBM Plex Sans' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Bebas Neue' rel='stylesheet'>
+    <!--link rel="icon" href="{{site.favicon| prepend:site.baseurl}}"> -->
+    <link rel="icon" href="{{site.favicon}}">
 	<script type="text/javascript" src="/assets/js/mootools.js"></script>
 	<script type="text/javascript" src="/assets/js/slideshow.js"></script>
 
@@ -53,7 +56,7 @@
        <div class="header">
 			<div style="float: left">
 				<div class="logo">
-					<a href="/home.html">
+					<a href="/index.html">
 						<img border="0" class="logo" alt="NGUYEN TAY" src="/assets/images/logo.png" />
 								</a>
 				</div>
@@ -88,10 +91,15 @@
 			<div class="main_left">
 				<ul class="main_nav">
 
-					<li><a href="/home.html">home</a></li>
+
+
+					<li><a href="/index.html">home</a></li>
 					<li><a href="/catalogue.html">visual art</a></li>
-					{% if page.category == "catalogue" %}
+					{% if page.category == "catalogue" or page.categories contains "Visual Art" %}
 					<ul>
+{% for post in site.posts %}
+<li><a href="{{ site.baseurl }}{{ post.url }}" title="{{ post.title }}">{{ post.title }} </li>
+{% endfor %}
 						<li><a href="/catalogue/cate/18.html">Artworks 2017</a></li>
 						<li><a href="/catalogue/cate/12.html">Artworks 2016</a></li>
 						<li><a href="/catalogue/cate/9.html">Artworks 2015</a></li>
@@ -151,7 +159,7 @@
 			<div id="seo">
 				<div class="powered"><a traget="_blank" href="/index.html">Powered by nguyentay</a></div>
 			</div>
-			<strong>&copy; Copyright 2018 </strong>
+			<strong>&copy; Copyright 2020 </strong>
 		</div>
 
 	</div>
