--- a/_layouts/cate.html
+++ b/_layouts/cate.html
@@ -93,8 +93,8 @@
 
 
 
-					<li><a href="/index.html">home</a></li>
-					<li><a href="/visual%20art/">visual art</a></li>
+					<li><a href="/index.html">Home</a></li>
+					<li><a href="/visual%20art/">Visual Art</a></li>
 					{% if page.category == "catalogue" or page.categories contains "Visual Art" %}
 					<ul>
                         {% for post in site.posts %}
@@ -111,8 +111,8 @@
 					</ul>
 					{% endif %}
 					<!-- <li><a href="/research">research</a></li>  -->
-					<li><a href="/cv.html">cv </a></li>
-					<li><a href="/exhibiton.html">Exhibition</a>
+					<li><a href="/cv.html">CV</a></li>
+					<li><a href="/exhibiton.html">Exhibitions</a>
 						{% if page.category == "exhibition" %}
 						<ul>
 							<li><a href="/exhibiton/cate/16.html">Exhibitions / Expositions 2017</a></li>
