--- a/_layouts/cate.html
+++ b/_layouts/cate.html
@@ -111,7 +111,7 @@
 					</ul>
 					{% endif %}
 					<!-- <li><a href="/research">research</a></li>  -->
-					<li><a href="/cv.html">CV</a></li>
+					<li><a href="/cv">CV</a></li>
 					<li><a href="/exhibiton.html">Exhibitions</a>
 						{% if page.category == "exhibition" %}
 						<ul>
